err/cwf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/cwf'...
Listing './lib/python3.5/site-packages/cwf/admin'...
Listing './lib/python3.5/site-packages/cwf/bin'...
Compiling './lib/python3.5/site-packages/cwf/bin/debugger.py'...
***   File "./lib/python3.5/site-packages/cwf/bin/debugger.py", line 58
    raise exc_type, exc_value, tb
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cwf/sections'...
Listing './lib/python3.5/site-packages/cwf/splitter'...
Compiling './lib/python3.5/site-packages/cwf/splitter/imports.py'...
***   File "./lib/python3.5/site-packages/cwf/splitter/imports.py", line 168
    except SyntaxError, s:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cwf/templates'...
Listing './lib/python3.5/site-packages/cwf/templates/admin'...
Listing './lib/python3.5/site-packages/cwf/templates/menu'...
Listing './lib/python3.5/site-packages/cwf/templatetags'...
Listing './lib/python3.5/site-packages/cwf/views'...
Compiling './lib/python3.5/site-packages/cwf/views/base.py'...
***   File "./lib/python3.5/site-packages/cwf/views/base.py", line 104
    raise Exception, "View object doesn't have a target : %s" % target
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cwf-1.2.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
